--- a/index.html
+++ b/index.html
@@ -102,14 +102,15 @@
     </div>
 </section>
 
-<div class="align-items-center" style="margin: 16px">
+<div class="container text-center my-4">
     <p><a href="#">Ver más</a></p>
-    <p>Descubre la mejor Tecnología en Dispositivos Móviles</p>
+    <p>
+    <h3>Descubre la mejor Tecnología en Dispositivos Móviles</h3></p>
 </div>
 
 <section id="Acerca" style="margin: 16px">
     <div class="container">
-        <div class="row justify-content-center">
+        <div class="row justify-content-center align-items-center">
             <div class="col-md-6 d-flex justify-content-center">
                 <div class="card text-justify">
                     <h2 class="card-header">Nuestro equipo</h2>
@@ -134,7 +135,7 @@
 
             <div class="col-md-6 d-flex justify-content-center">
                 <div class="text-justify">
-                    <h2 class="card-header">Nuestro producto</h2>
+                    <h2 class="card-header text-center" style="margin: 16px">Nuestro producto</h2>
                     <p>Este apartado está diseñado para brindarte una experiencia de usuario superior. Con un diseño
                         intuitivo y
                         características innovadoras, este producto se adapta perfectamente a tus necesidades. Nos
@@ -149,26 +150,26 @@
         </div>
     </div>
 
-
-    <div class="row justify-content-center">
-        <div class="col-md-6 d-flex justify-content-center">
-            <div class="text-justify">
-                <h2 class="card-header">Nuestro servicio</h2>
-                <p>Este apartado está diseñado para brindarte una experiencia de usuario superior. Con un diseño
-                    intuitivo y
-                    características innovadoras, este producto se adapta perfectamente a tus necesidades. Nos
-                    aseguramos de
-                    que
-                    cada detalle sea atendido, ofreciendo tanto funcionalidad como estilo. ¡Descubre todo lo que
-                    puedes
-                    lograr
-                    con nuestro equipo a tu lado!</p>
+    <div class="container" style="margin-top: 16px">
+        <div class="row justify-content-center align-items-center">
+            <div class="col-md-6 d-flex justify-content-center">
+                <div class="text-justify">
+                    <h2 class="card-header text-center" style="margin: 16px">Nuestro servicio</h2>
+                    <p>Este apartado está diseñado para brindarte una experiencia de usuario superior. Con un diseño
+                        intuitivo y
+                        características innovadoras, este producto se adapta perfectamente a tus necesidades. Nos
+                        aseguramos de
+                        que
+                        cada detalle sea atendido, ofreciendo tanto funcionalidad como estilo. ¡Descubre todo lo que
+                        puedes
+                        lograr
+                        con nuestro equipo a tu lado!</p>
+                </div>
             </div>
-
 
             <div class="col-md-6 d-flex justify-content-center">
                 <div class="card text-justify">
-                    <h2 class="card-header">Nuestras instalaciones</h2>
+                    <h2 class="card-header text-end">Nuestras instalaciones</h2>
                     <img src="img/producto5.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Contamos con un total de 4 instalaciones ubicadas en diferentes puntos
@@ -179,17 +180,21 @@
                 </div>
             </div>
         </div>
+    </div>
 
-        <p>Acerca de nosotros</p>
+    <div class="container text-center my-4">
+        <p>
+        <h3>Acerca de nosotros</h3></p>
+    </div>
 </section>
 
 <section id="Historia" style="margin: 16px">
     <div class="container">
-        <h2 class="text-justify my-4">Nuestra Historia</h2>
+        <h2 class="text-center">Nuestra Historia</h2>
         <div class="row justify-content-center">
             <div class="col-md-6 d-flex justify-content-center">
-                <div class="card text-justify" style="width: 22rem;">
-                    <h5 class="card-header">Nuestra Trayectoria</h5>
+                <div class="card text-justify">
+                    <h5 class="card-header text-center">Nuestra Trayectoria</h5>
                     <img src="img/historia.jpg" class="card-img-top" alt="Historia de la empresa">
                     <div class="card-body">
                         <p class="card-text">
@@ -207,15 +212,13 @@
 
 <section id="Contácto" style="margin: 16px">
     <div class="container">
-        <h2 class="text-justify my-4">Contáctanos</h2>
+        <h2 class="text-center">Contáctanos</h2>
         <div class="row justify-content-center">
-
-
-            <div class="col-md-6 d-flex justify-content-center">
-                <div class="card text-justify" style="width: 22rem;">
-                    <h5 class="card-header">Información de Contacto</h5>
+            <div class="col-md-6 d-flex justify-content-center align-items-center">
+                <div class="card text-justify">
+                    <h5 class="card-header text-center">Información de Contacto</h5>
                     <div class="card-body">
-                        <p class="card-text"><strong>Dirección:</strong> Calle Ficticia #123, Ciudad, País</p>
+                        <p class="card-text"><strong>Dirección:</strong> México</p>
                         <p class="card-text"><strong>Teléfono:</strong> +52 123 456 7890</p>
                         <p class="card-text"><strong>Email:</strong> contacto@empresa.com</p>
                         <p class="card-text"><strong>Horario:</strong> Lunes a Viernes - 9:00 AM a 6:00 PM</p>
@@ -225,6 +228,7 @@
         </div>
     </div>
 </section>
+
 
 </body>
 </html>
